# hit-consistency

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  debug.txt  raft_message.pb.cc  raft_message.pb.h
cmake/: common.cmake
cpp/: ballot.cc  ballot.h  ballot_box.cc  ballot_box.h  closure_queue.cc  closure_queue.h  configuration.cc  configuration.h  configuration_manager.cc  configuration_manager.h  file_system_adaptor.cc  file_system_adaptor.h  fsm_caller.cc  fsm_caller.h  fsync.cc  fsync.h  log.cc  log.h  log_entry.cc  log_entry.h  log_manager.cc  log_manager.h  macros.h  node.cc  node.h  protobuf_file.cc  protobuf_file.h  raft.cc  raft.h  raft_meta.cc  raft_meta.h  raft_server.cc  raft_service.cc  raft_service.h  repeated_timer_task.cc  repeated_timer_task.h  replicator.cc  replicator.h  storage.cc  storage.h  (+2 more)
data1/log/: log_inprogress_00000000000000000001
data1/raft_meta/: raft_meta
examples/: raft_client.cc  raft_server.cc
protos/: enum.proto  errno.proto  local_storage.proto  make_proto.sh  raft_message.grpc.pb.cc  raft_message.pb.cc  raft_message.proto  state_machine.proto
test/: test_ballot.cc  test_ballot_box.cc  test_log.cc  test_log_manager.cc  test_main.cc  tests_main.cc
